# RiveQtQuickPlugin2

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: apple.yml  ci.yml  release.yml  upstream-rive-check.yml
cmake/: RiveApplePlatformSetup.cmake  RiveExampleSupport.cmake  RiveThirdParty.cmake  RunWithWinDeployQt.cmake  WinDeployQt.cmake  generate_rive_shaders.py
examples/audio/: CMakeLists.txt  main.cpp
examples/common/: exampleappsupport.cpp  exampleappsupport.h  exampleappsupport_ios.mm
examples/icon_grid/: CMakeLists.txt  Main.qml  icongridmodel.cpp  icongridmodel.h  main.cpp
examples/interactive/: CMakeLists.txt  Main.qml  main.cpp
examples/marketplace_demo/: CMakeLists.txt  Main.qml  main.cpp  marketplacecatalog.cpp  marketplacecatalog.h  marketplaceiosnetwork.h  marketplaceiosnetwork.mm  starter_catalog.json
examples/minimal/: CMakeLists.txt  Main.qml  main.cpp
scripts/: bootstrap.py
src/RiveQtQuick/: CMakeLists.txt  rivebinding.cpp  rivebinding.h  riveitem.cpp  riveitem.h  riveqtquickplugin.cpp
src/RiveQtQuick/private/: qtglprocaddress.cpp  qtglprocaddress.h  rivebackendbridge.cpp  rivebackendbridge.h  rived3d11bridge.cpp  rived3d11bridge.h  rived3d12bridge.cpp  rived3d12bridge.h  rivefileassetloader.cpp  rivefileassetloader.h  riveglbridge.cpp  riveglbridge.h  riveinspector.cpp  riveinspector.h  rivelogging.cpp  rivelogging.h  rivemetalbridge.h  rivemetalbridge.mm  riverendernode.cpp  riverendernode.h  riverenderstate.h  rivesoftwarebridge.cpp  rivesoftwarebridge.h  rivevulkanbridge.cpp  rivevulkanbridge.h
src/RiveQtQuick/private/qpainter/: qpainterrivefactory.cpp  qpainterrivefactory.h  qpainterriveimage.cpp  qpainterriveimage.h  qpainterrivepaint.cpp  qpainterrivepaint.h  qpainterrivepath.cpp  qpainterrivepath.h  qpainterriverenderer.cpp  qpainterriverenderer.h  qpainterriveshader.cpp  qpainterriveshader.h
tests/: CMakeLists.txt
tests/assets/: README.md  manifest.json
tests/qml/: CMakeLists.txt  DeploymentImports.qml  test_qml_imports.cpp
tests/unit/: CMakeLists.txt  test_source_loading.cpp
